# stm32ComponentTester

./: .gitignore  .gitmodules  CMakeLists.txt  Capacitor.cpp  Capacitor.h  Component.cpp  Component.h  FreeRTOSConfig.h  LICENSE  License.txt  README.md  Resistor.cpp  adc_limit.h  allComponents.h  calibration.cpp  calibration.h  component.h  componentSignature.cpp  componentSignature.h  cpuID.cpp  cpuID.h  cycleClock.h  debug_conf.h  deltaADC.cpp  deltaADC.h  dso_debug.h  dso_logger.cpp  fancyLock.cpp  fancyLock.h  menuSystem.cpp  myCode.cpp  nmv_default.h  nvm.cpp  nvm.h  nvm_default.h  pinAutoTest.cpp  pinConfiguration.h  pinConfiguration_old.cpp  platformConfig.cmake  resistor.h  (+11 more)
adc/: CMakeLists.txt  diff_with_dso.txt  dso_adc.h  dso_adc_fast.cpp  dso_adc_priv.h  dso_adc_slow.cpp  dso_adc_slow_gd32.cpp  dso_adc_slow_stm32.cpp  dso_adc_updown.cpp  dso_adc_util.cpp
assets/: CMakeLists.txt  README.txt  assets.cpp  assets.h  convert.py  convert.sh  license.txt
assets/Fonts/: FreeSansBold6pt7b.h  FreeSansBold9pt7b.h  fontconvert  fontgen.sh
assets/fonts/: CMakeLists.txt  fonts.c
cmake_utils/: unpatch.bash
componentLibrary/: CMakeLists.txt  Capacitor.cpp  Capacitor.h  Capacitor_ESR.cpp  Capacitor_high_cap.cpp  Capacitor_low_cap.cpp  Capacitor_med_cap.cpp  Capacitor_quickEval.cpp  Capacitor_very_low_cap.cpp  Capacitor_very_low_cap_alt.cpp  Capacitor_very_low_cap_base.cpp  Coil.cpp  Coil.h  Component.cpp  Component.h  Diode.cpp  Diode.h  Mosfet.cpp  Mosfet.h  NPN_bjt.cpp  NPN_bjt.h  N_Mosfet.cpp  N_Mosfet.h  PNP_bjt.cpp  PNP_bjt.h  P_Mosfet.cpp  P_Mosfet.h  Resistor.cpp  Resistor.h  grapher.cpp  resistor.h  waveForm.cpp  waveForm.h
configurations/default/: pinConfiguration.cpp  pinConfiguration.h
configurations/myNew/: pinConfiguration.cpp  pinConfiguration.h
configurations/myOld/: pinConfiguration.cpp  pinConfiguration.h
control/: CMakeLists.txt  testerControl.cpp  testerControl.h
control/rotary/: CMakeLists.txt  testerControl.cpp  wav_irotary.cpp  wav_irotary.h
eprintf/: CMakeLists.txt
graphics/: CMakeLists.txt  ST7735_Gfx.cpp  testerGfx.h
graphics/ST7735/: ST7735_Gfx.cpp  ST7735_ex.cpp  ST7735_ex.h  ST7735_ex_glyph.cpp  splash_compressed.h
graphics/ST7735/Adafruit-ST7735-mod/: Adafruit_ST7735.cpp  Adafruit_ST7735.h  Adafruit_ST7735_const.h  Adafruit_ST7735_internal.h
graphics/fonts/: CMakeLists.txt  fonts.c
graphics/tinyAdafruit_ST7735/: tinyAdafruit_ST7735.cpp  tinyAdafruit_ST7735.h  tinyAdafruit_ST7735_priv.h
helpers/: helper_pwm.cpp
kicad/tester/: screen_st7735_128x128.dcm  screen_st7735_128x128.lib  tester-cache.lib  tester.bak  tester.pro  tester.sch
menu/: CMakeLists.txt  dso_menuEngine.cpp
patches/: gd32_patch.diff  remap_pin_timer2.diff  spi_dma_async_patch2.diff
rotary/: CMakeLists.txt  pushButton.cpp  pushButton.h  wav_irotary.cpp  wav_irotary.h
stubs/: Adafruit_GFX_AS.h
test/: scratchpad.cpp
test/fq/: CMakeLists.txt  fq.cpp
utils/: cycleClock.cpp  myPwm.cpp  myPwm.h  usb_stubs.c
